--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webs",
   "version": "0.0.1",
   "description": "webs is a command-line http server.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
